# todos-actix-htmx

./: .gitignore  Cargo.toml  README.md
migrations/: 20240502142420_create_todos.sql
src/: api.rs  config.rs  main.rs  model.rs  view.rs
templates/: index.html
templates/layouts/: base.html
templates/partials/: todo_form.html  todo_item.html
