[package]
name = "todos-actix-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-web-lab = "0.20.2"
askama = { version = "0.12.1", features = ["with-actix-web"] }
askama_actix = "0.14.0"
chrono = { version = "0.4.38", features = ["serde"] }
cuid2 = "0.1.2"
dotenvy = "0.15.7"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = [
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
  "macros",
  "chrono",
] }
